2017-09-18 [mborik] warnings suppression (phase 2), project update, repo cleanup and fixing the build for MacOS
2017-09-14 [mborik] warnings suppression (phase 1)
2017-04-19 [ub880d] bugfix in screen rendering and fixing the build for new gcc (narrowing conversions)
2016-07-25 [ub880d] fixed missing callback on menu entry "OK" of "SAVE MEMORY"
2015-05-24 [ub880d] added warning about wrong file extension for ROM modules
2015-04-19 [ub880d] fixed labels/shortcuts in menu 'FILE'
2014-02-24 [Staon]  project tracker ticket #2: ScanDir compatibility bug
2012-06-19 [mborik] fixed crashes during OpenGL initialization with reinterpret_cast
2012-06-18 [mborik] prerelease bugfixes and mods
2012-06-08 [mborik] fixed multithreaded video rendering problems (especially in OpenGL) with SDL_VIDEOEXPOSE event
2012-06-07 [mborik] implemented read/write memory block; fixed some time-critical bugs in dialogues
2012-06-05 [mborik] imported rombor's improvements in emulation of 8253, ifTimer and PMD32; removed ifMusica occurrences
2012-06-04 [mborik] implemented emulation speed change
2012-06-01 [ikon]   comment translation sk>en (1st phase)
2012-05-31 [mborik] fullscreen toggle; some minor fixes
2012-05-30 [mborik] reworked status bar icons loading and some palette problems solved
2012-05-26 [mborik] bugfix and fine-tuning of OpenGL screen rendering
2012-05-24 [mborik] OpenGL screen rendering implementation which can be enabled with configure (--with-opengl)
2012-03-15 [mborik] instruction tracing in debugger (too buggy yet)
2012-03-04 [mborik] first implementation of debugger (drawings only)
2012-02-22 [mborik] improvements and some mods on quick-searching in fileSelector (with some ideas by ub880d :)
2012-02-21 [mikezt] implemented quick-searching in fileSelector
2012-02-18 [mborik] major bugfixes in Settings class and finalized saving of settings (autosave too :)
2012-02-11 [mborik] fixed TapeBrowser bug if tape file from configuration not exists