@@ -20,7 +20,7 @@
   - translation of rombor's comments in classes from slovak language.
 
 + mikezt/zeroteam
-  - quick-search in file-selector and beta-testing.
+  - quick-search in file-selector, bugfixes and beta-testing.
 
 + Staon
   - fixing compatibility bug in file-selector's ScanDir.
