@@ -168,7 +168,7 @@ enum TJoyType { JT_NONE = -1, JT_KEYS = 0, JT_AXES, JT_POV, JT_BUTTONS };
 enum TMouseType { MT_NONE = -1, MT_M602 = 0, MT_POLY8 };
 enum TRaomType { RT_CHTF = 0, RT_KUVI = 1 };
 enum TDisplayMode { DM_NORMAL = 1, DM_DOUBLESIZE, DM_TRIPLESIZE, DM_QUADRUPLESIZE, DM_FULLSCREEN = 0 };
-enum TColorProfile { CP_MONO, CP_STANDARD, CP_COLOR, CP_MULTICOLOR };
+enum TColorProfile { CP_MONO, CP_STANDARD, CP_COLOR, CP_COLORACE };
 enum TColorPalette { CL_DEFINED, CL_RGB, CL_VIDEO };
 enum THalfPassMode { HP_OFF, HP_75, HP_50, HP_25, HP_0 };
 enum TColor { BLACK = 0, MAROON, GREEN, OLIVE, NAVY, PURPLE, TEAL, GRAY, SILVER, RED, LIME, YELLOW, BLUE, FUCHSIA, AQUA, WHITE };
